--- a/h5.html
+++ b/h5.html
@@ -8,6 +8,6 @@
     <title>git-demo</title>
 </head>
 <body>
-    <h3>hero~  修改一波文件 再次修改文件</h3>
+    <h3>hero~ version 1.0.0 这才是version 1.0.0</h3>
 </body>
 </html>
