--- a/h5 - 副本.html
+++ b/h5 - 副本.html
@@ -8,7 +8,6 @@
     <title>git-demo</title>
 </head>
 <body>
-    <h3>this is dev branch
-    </h3>
+    <h3>this is dev branch</h3>
 </body>
 </html>
